--- a/Kinomonster/src/app/app.component.html
+++ b/Kinomonster/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-header></app-header>
+<div class="wrapper">
+    <app-header></app-header>
+    <main class="main-content">
+        <!--Временно изменил app.commponent, чтобы футер нормально к низу привзялася. Эльдияру нужно main заполнить-->
+        <p>Temporary</p>
+    </main>
+    <app-footer></app-footer>
+</div>
