Я закончил карусель! Перевел footer в components

--- a/Kinomonster/src/app/components/header/header.component.html
+++ b/Kinomonster/src/app/components/header/header.component.html
@@ -4,7 +4,10 @@
       <ul>
         <li>
           <a href="#" class="logo">
-            <img src="img/logo_kinomonster.svg" alt="logo" />
+            <img
+              src="C:\Users\Admin\OneDrive\Рабочий стол\Web_dev Project\WebDevProject\Kinomonster\public\logo_kinomonster.svg"
+              alt="logo"
+            />
           </a>
         </li>
       </ul>
