--- a/Kinomonster/src/app/app.component.html
+++ b/Kinomonster/src/app/app.component.html
@@ -1,8 +1,7 @@
 <div class="wrapper">
-    <app-header></app-header>
-    <main class="main-content">
-        <!--Временно изменил app.commponent, чтобы футер нормально к низу привзялася. Эльдияру нужно main заполнить-->
-        <p>Temporary</p>
-    </main>
-    <app-footer></app-footer>
+  <app-header></app-header>
+  <main class="main-content">
+    <router-outlet></router-outlet>
+  </main>
+  <app-footer></app-footer>
 </div>
