Пофиксил проблемы с фотографиями и лого киномонстера, а также иконки соцсетей. Удалил папку assets, все перенес в public. НЕ ПЕРЕНОСИТЬ!

--- a/Kinomonster/src/app/components/footer/footer.component.html
+++ b/Kinomonster/src/app/components/footer/footer.component.html
@@ -19,11 +19,11 @@
     <div class="social-media">
       <span>Follow us via social media:</span>
       <div class="icons">
-        <a href="#"><img src="/assets/youtube.svg" alt="YouTube"></a>
-        <a href="#"><img src="assets/facebook.svg" alt="Facebook"></a>
-        <a href="#"><img src="assets/instagramm.svg" alt="Instagram"></a>
-        <a href="#"><img src="assets/vk.svg" alt="VK"></a>
-        <a href="#"><img src="assets/telegramm.svg" alt="Telegram"></a>
+        <a href="#"><img src="youtube.svg" alt="YouTube"></a>
+        <a href="#"><img src="facebook.svg" alt="Facebook"></a>
+        <a href="#"><img src="instagramm.svg" alt="Instagram"></a>
+        <a href="#"><img src="vk.svg" alt="VK"></a>
+        <a href="#"><img src="telegramm.svg" alt="Telegram"></a> <!--Убрал assets. Все фото перекинул в public-->
       </div>
     </div>
   
