--- a/Kinomonster/src/app/components/header/header.component.html
+++ b/Kinomonster/src/app/components/header/header.component.html
@@ -5,9 +5,9 @@
         <li>
           <a href="#" class="logo">
             <img
-              src="C:\Users\Admin\OneDrive\Рабочий стол\Web_dev Project\WebDevProject\Kinomonster\public\logo_kinomonster.svg"
+              src="logo_kinomonster.svg"
               alt="logo"
-            />
+            /> <!--Удалил путь-->
           </a>
         </li>
       </ul>
@@ -25,11 +25,11 @@
     <div class="header-nav-elems-mobile">
       <ul>
         <li class="mobile-btn">
-          <img src="img/menuicon.svg" alt="menu" (click)="toggleMenu()" />
+          <img src="menuicon.svg" alt="menu" (click)="toggleMenu()" /> <!--Удалил assets-->
         </li>
         <li>
           <a href="#" class="logo">
-            <img src="img/logo_kinomonster.svg" alt="logo" />
+            <img src="logo_kinomonster.svg" alt="logo" /> <!--Удалил img-->
           </a>
         </li>
       </ul>
