--- a/Kinomonster/src/app/components/main/main.component.html
+++ b/Kinomonster/src/app/components/main/main.component.html
@@ -4,7 +4,7 @@
       <li>
         <img
           class="main-slider-img"
-          src="assets/img/hero/fight-club-hero.jpg"
+          src="fight-club-hero.jpg"
           alt="img"
         />
         <div class="default-container">
@@ -22,7 +22,7 @@
       <li>
         <img
           class="main-slider-img"
-          src="assets/img/hero/joker.jpg"
+          src="joker.jpg"
           alt="img"
         />
         <div class="default-container">
@@ -40,7 +40,7 @@
       <li>
         <img
           class="main-slider-img"
-          src="assets/img/hero/no-country-for-old-men.jpg"
+          src="no-country-for-old-men.jpg"
           alt="img"
         />
         <div class="default-container">
@@ -58,9 +58,9 @@
       <li>
         <img
           class="main-slider-img"
-          src="assets/img/hero/bladerunner.jpg"
+          src="bladerunner.jpg"
           alt="img"
-        />
+        /> <!--Убрал assets-->
         <div class="default-container">
           <div class="hero-movie">
             <p>Blade Runner</p>
@@ -93,7 +93,7 @@
     <p class="lbl-p">On now</p>
     <div class="posters-now">
       <div class="poster-now">
-        <img src="assets/img/posters/2/live-with-kelly.jpg" alt="poster-now" />
+        <img src="live-with-kelly_poster.jpg" alt="poster-now" />
         <div class="poster-now-lbls">
           <p>S5 E2</p>
           <p>Live with Kelly and Ryan</p>
@@ -101,7 +101,7 @@
       </div>
 
       <div class="poster-now">
-        <img src="assets/img/posters/2/bbt.jpg" alt="poster-now" />
+        <img src="bbt_poster.jpg" alt="poster-now" />
         <div class="poster-now-lbls">
           <p>S12 E2</p>
           <p>The Big Bang Theory</p>
@@ -109,7 +109,7 @@
       </div>
 
       <div class="poster-now">
-        <img src="assets/img/posters/2/s-park.jpg" alt="poster-now" />
+        <img src="s-park_poster.jpg" alt="poster-now" />
         <div class="poster-now-lbls">
           <p>S95 E2</p>
           <p>South Park</p>
@@ -118,7 +118,7 @@
 
       <div class="poster-now">
         <img
-          src="assets/img/posters/2/stranger-things-s-3.jpg"
+          src="stranger-things-s-3_poster.jpg"
           alt="poster-now"
         />
         <div class="poster-now-lbls">
@@ -128,7 +128,7 @@
       </div>
 
       <div class="poster-now">
-        <img src="assets/img/posters/2/fclub.jpg" alt="poster-now" />
+        <img src="fclub_poster.jpg" alt="poster-now" />
         <div class="poster-now-lbls">
           <p>MOVIE</p>
           <p>Fight Club</p>
@@ -136,7 +136,7 @@
       </div>
 
       <div class="poster-now">
-        <img src="assets/img/posters/2/stands.jpg" alt="poster-now" />
+        <img src="stands_poster.jpg" alt="poster-now" />
         <div class="poster-now-lbls">
           <p>S1 E3</p>
           <p>The Stand</p>
@@ -149,27 +149,27 @@
     <p class="lbl-p">Popular Shows And Movies</p>
     <div class="posters">
       <div class="poster">
-        <img src="assets/img/posters/1/stranger-things.jpg" alt="" />
+        <img src="stranger-things_poster.jpg" alt="" />
       </div>
       <div class="poster">
-        <img src="assets/img/posters/1/friends.jpg" alt="" />
+        <img src="friends_poster.jpg" alt="" />
       </div>
       <div class="poster">
-        <img src="assets/img/posters/1/mand.jpg" alt="" />
+        <img src="mand_poster.jpg" alt="" />
       </div>
       <div class="poster">
-        <img src="assets/img/posters/1/free-guy.jpg" alt="" />
+        <img src="free-guy_poster.jpg" alt="" />
       </div>
       <div class="poster">
         <a href="movie.html"
-          ><img src="assets/img/posters/1/joker.jpg" alt=""
+          ><img src="joker_poster.jpg" alt=""
         /></a>
       </div>
       <div class="poster">
-        <img src="assets/img/posters/1/chernobyl.jpg" alt="" />
+        <img src="chernobyl_poster.jpg" alt="" />
       </div>
       <div class="poster">
-        <img src="assets/img/posters/1/space-sweepers.jpg" alt="" />
+        <img src="space-sweepers_poster.jpg" alt="" />
       </div>
     </div>
   </section>
@@ -178,25 +178,25 @@
     <p class="lbl-p">Recently Added Shows</p>
     <div class="posters">
       <div class="poster">
-        <img src="assets/img/posters/1/shimmer.jpg" alt="" />
+        <img src="shimmer_poster.jpg" alt="" />
       </div>
       <div class="poster">
-        <img src="assets/img/posters/1/bridgerton.jpg" alt="" />
+        <img src="bridgerton_poster.jpg" alt="" />
       </div>
       <div class="poster">
-        <img src="assets/img/posters/1/queens-gambit.jpg" alt="" />
+        <img src="queens-gambit_poster.jpg" alt="" />
       </div>
       <div class="poster">
-        <img src="assets/img/posters/1/dark.jpg" alt="" />
+        <img src="dark_poster.jpg" alt="" />
       </div>
       <div class="poster">
-        <img src="assets/img/posters/1/lucifer.jpg" alt="" />
+        <img src="lucifer_poster.jpg" alt="" />
       </div>
       <div class="poster">
-        <img src="assets/img/posters/1/shameless.jpg" alt="" />
+        <img src="shameless_poster.jpg" alt="" />
       </div>
       <div class="poster">
-        <img src="assets/img/posters/1/the-undoing.jpg" alt="" />
+        <img src="the-undoing_poster.jpg" alt="" />
       </div>
     </div>
   </section>
@@ -205,25 +205,25 @@
     <p class="lbl-p">Recently Added Movies</p>
     <div class="posters">
       <div class="poster">
-        <img src="assets/img/posters/1/the-trial-of-chicago.jpg" alt="" />
+        <img src="the-trial-of-chicago_poster.jpg" alt="" />
       </div>
       <div class="poster">
-        <img src="assets/img/posters/1/the-wolf-of-wall-street.jpg" alt="" />
+        <img src="the-wolf-of-wall-street_poster.jpg" alt="" />
       </div>
       <div class="poster">
-        <img src="assets/img/posters/1/ww-84.jpg" alt="" />
+        <img src="ww-84_poster.jpg" alt="" />
       </div>
       <div class="poster">
-        <img src="assets/img/posters/1/fight-club.jpg" alt="" />
+        <img src="fight-club_poster.jpg" alt="" />
       </div>
       <div class="poster">
-        <img src="assets/img/posters/1/harry-potter.jpg" alt="" />
+        <img src="harry-potter_poster.jpg" alt="" />
       </div>
       <div class="poster">
-        <img src="assets/img/posters/1/holidate.jpg" alt="" />
+        <img src="holidate_poster.jpg" alt="" />
       </div>
       <div class="poster">
-        <img src="assets/img/posters/1/death-on-the-nile.jpg" alt="" />
+        <img src="death-on-the-nile_poster.jpg" alt="" />
       </div>
     </div>
   </section>
