Добавил рабочий логин

--- a/Kinomonster/src/app/components3/login/login.component.html
+++ b/Kinomonster/src/app/components3/login/login.component.html
@@ -12,3 +12,10 @@
   </div>
   <p>No account? <span>Register</span></p>
 </section>
+<!-- <form (ngSubmit)="onSubmit()">
+  <label>Email</label>
+  <input type="email" [(ngModel)]="email" name="email" required />
+  <label>Password</label>
+  <input type="password" [(ngModel)]="password" name="password" required />
+  <input type="submit" value="Log In" />
+</form> -->
